update spring boot version to 3.0.2
migrate properties to springboot3.0